--- a/Models/SpeechLM/ST2S/2022.09.30_AudioGen.md
+++ b/Models/SpeechLM/ST2S/2022.09.30_AudioGen.md
@@ -20,8 +20,8 @@
   - [Github]
   - [Demo](https://felixkreuk.github.io/audiogen)
 - 文件:
-  - [ArXiv](_PDF/2209.15352v2__AudioGen__Textually_Guided_Audio_Generation.pdf)
-  - [Publication](_PDF/2209.15352p0__AudioGen__ICLR2023.pdf)
+  - [ArXiv](../_PDF/2209.15352v2__AudioGen__Textually_Guided_Audio_Generation.pdf)
+  - [Publication](../_PDF/2209.15352p0__AudioGen__ICLR2023.pdf)
 
 </details>
 
@@ -47,7 +47,7 @@ Samples: [this https URL](https://felixkreuk.github.io/audiogen)
 
 </td><td>
 
-我们尝试解决以描述性文本标题为条件的音频样本生成问题.
+我们尝试解决以描述性文本说明为条件的音频样本生成问题.
 本项工作提出了 ***AudioGen***, 一种自回归生成模型, 它可以将文本输入作为条件生成音频样本.
 ***AudioGen*** 采用了预训练好的离散音频表示.
 文本转音频生成的任务存在多个挑战.
