--- a/Models/SpeechLM/ST2S/2023.01.05_VALL-E.md
+++ b/Models/SpeechLM/ST2S/2023.01.05_VALL-E.md
@@ -27,7 +27,7 @@
     - 2024.06.10 [dukGuo/valle-audiodec](https://github.com/dukGuo/valle-audiodec) 仅推理
   - [Demo](https://aka.ms/valle)
 - 文件:
-  - [ArXiv](_PDF/2301.02111v1__VALL-E__Neural_Codec_Language_Models_are_Zero-Shot_TTS.pdf)
+  - [ArXiv](../_PDF/2301.02111v1__VALL-E__Neural_Codec_Language_Models_are_Zero-Shot_TTS.pdf)
   - [Publication] #TODO
 
 </details>
@@ -58,29 +58,29 @@ See https://aka.ms/valle for demos of our work.
 
 ## 1·Introduction: 引言
 
-![Images/2023.01.05_VALL-E_Fig.01.png](Images/2023.01.05_VALL-E_Fig.01.png)
+![Images/2023.01.05_VALL-E_Fig.01.png](../Images/2023.01.05_VALL-E_Fig.01.png)
 
 <table><tr><td width="50%">
 
 The last decade has yielded dramatic breakthroughs in speech synthesis through the development of neural networks and end-to-end modeling.
-Currently, cascaded *text-to-speech (TTS)* systems ([Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
-While advanced TTS systems can synthesize high-quality speech from single or multiple speakers ([DelightfulTTS2 (2022)](../TTS2_Acoustic/2022.07.11_DelightfulTTS2.md); [VITS (2021)](../E2E/2021.06.11_VITS.md)), it still requires high-quality clean data from the recording studio.
+Currently, cascaded *text-to-speech (TTS)* systems ([Tacotron2 (2017)](../../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
+While advanced TTS systems can synthesize high-quality speech from single or multiple speakers ([DelightfulTTS2 (2022)](../../TTS2_Acoustic/2022.07.11_DelightfulTTS2.md); [VITS (2021)](../../E2E/2021.06.11_VITS.md)), it still requires high-quality clean data from the recording studio.
 Large-scale data crawled from the Internet cannot meet the requirement, and always lead to performance degradation.
 Because the training data is relatively small, current TTS systems still suffer from poor generalization.
 Speaker similarity and speech naturalness decline dramatically for unseen speakers in the zero-shot scenario.
-To tackle the zero-shot TTS problem, existing work leverages speaker adaptation ([SEA (2018)](../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md)) and speaker encoding ([Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md); [YourTTS (2021)](../E2E/2021.12.04_YourTTS.md)) methods, requiring additional fine-tuning, complex pre-designed features, or heavy structure engineering.
+To tackle the zero-shot TTS problem, existing work leverages speaker adaptation ([SEA (2018)](../../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md)) and speaker encoding ([Arik (2018)](../../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md); [YourTTS (2021)](../../E2E/2021.12.04_YourTTS.md)) methods, requiring additional fine-tuning, complex pre-designed features, or heavy structure engineering.
 
 </td><td>
 
 </td></tr>
 <tr><td>
 
-Instead of designing a complex and specific network for this problem, the ultimate solution is to train a model with large and diverse data as much as possible, motivated by success in the field of text synthesis ([GPT-3 (2020)](../TextLM/2020.05.28_GPT-3.md); [PaLM (2022)](../TextLM/2022.04.05_PaLM.md)).
-Recent years have witnessed notable performance improvement for data increase in the text language model, from 16GB of uncompressed text ([BERT (2018)](../TextLM/2018.10.11_BERT.md)), to 160GB ([RoBERTa (2019)](../TextLM/2019.07.26_RoBERTa.md)), to 570GB ([GPT-3 (2020)](../TextLM/2020.05.28_GPT-3.md)), and finally, around 1TB ([PaLM (2022)](../TextLM/2022.04.05_PaLM.md)).
+Instead of designing a complex and specific network for this problem, the ultimate solution is to train a model with large and diverse data as much as possible, motivated by success in the field of text synthesis ([GPT-3 (2020)](../../TextLM/2020.05.28_GPT-3.md); [PaLM (2022)](../../TextLM/2022.04.05_PaLM.md)).
+Recent years have witnessed notable performance improvement for data increase in the text language model, from 16GB of uncompressed text ([BERT (2018)](../../TextLM/2018.10.11_BERT.md)), to 160GB ([RoBERTa (2019)](../../TextLM/2019.07.26_RoBERTa.md)), to 570GB ([GPT-3 (2020)](../../TextLM/2020.05.28_GPT-3.md)), and finally, around 1TB ([PaLM (2022)](../../TextLM/2022.04.05_PaLM.md)).
 Transferring this success to the field of speech synthesis, we introduce ***VALL-E***, the first language model-based TTS framework leveraging large, diverse, and multi-speaker speech data.
 As shown in Fig.01, to synthesize personalized speech (e.g., zero-shot TTS), ***VALL-E*** generates the corresponding acoustic tokens conditioned on the acoustic tokens of the 3-second enrolled recording and the phoneme prompt, which constrain the speaker and content information respectively.
-Finally, the generated acoustic tokens are used to synthesize the final waveform with the corresponding neural codec decoder ([EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)).
-The discrete acoustic tokens derived from an audio codec model enable us to treat TTS as conditional codec language modeling and advanced prompting-based large-model techniques (as in [GPTs (2020)](../TextLM/2020.05.28_GPT-3.md))can be leveraged for the TTS tasks.
+Finally, the generated acoustic tokens are used to synthesize the final waveform with the corresponding neural codec decoder ([EnCodec (2022)](../../SpeechCodec/2022.10.24_EnCodec.md)).
+The discrete acoustic tokens derived from an audio codec model enable us to treat TTS as conditional codec language modeling and advanced prompting-based large-model techniques (as in [GPTs (2020)](../../TextLM/2020.05.28_GPT-3.md))can be leveraged for the TTS tasks.
 The acoustic tokens also allow us to generate diverse synthesized results in TTS by using different sampling strategies during inference.
 
 </td><td>
@@ -88,9 +88,9 @@ The acoustic tokens also allow us to generate diverse synthesized results in TTS
 </td></tr>
 <tr><td>
 
-We train ***VALL-E*** with [LibriLight (2019)](../../Datasets/2019.12.17_Libri-Light.md), a corpus consisting of 60K hours of English speech with over 7000 unique speakers.
+We train ***VALL-E*** with [LibriLight (2019)](../../../Datasets/2019.12.17_Libri-Light.md), a corpus consisting of 60K hours of English speech with over 7000 unique speakers.
 The original data is audio-only, so we employ a speech recognition model to generate the transcriptions.
-Compared to previous TTS training datasets, such as [LibriTTS (2019)](../../Datasets/2019.04.05_LibriTTS.md), our data contain more noisy speech and inaccurate transcriptions but provide diverse speakers and prosodies.
+Compared to previous TTS training datasets, such as [LibriTTS (2019)](../../../Datasets/2019.04.05_LibriTTS.md), our data contain more noisy speech and inaccurate transcriptions but provide diverse speakers and prosodies.
 We believe the proposed approach is robust to the noise and generalize well by leveraging large data.
 It is worth noting that existing TTS systems are always trained with dozens of hours of single-speaker data or hundreds of hours of multi-speaker data, which is over hundreds of times smaller than ***VALL-E***.
 Tab.01 summarizes the innovation of ***VALL-E***, a language model approach for TTS, using audio codec codes as intermediate representations, leveraging large and diverse data, leading to strong in-context learning capabilities.
@@ -109,8 +109,8 @@ Tab.01 summarizes the innovation of ***VALL-E***, a language model approach for 
 </td></tr>
 <tr><td>
 
-We evaluate ***VALL-E*** on [LibriSpeech (2015)](../../Datasets/2015.04.19_LibriSpeech.md) and [VCTK (2016)](../../Datasets/2012.08.00_VCTK.md) datasets, where all test speakers are unseen in the training corpus.
-***VALL-E*** significantly outperforms the state-of-the-art zero-shot TTS system ([YourTTS (2021)](../E2E/2021.12.04_YourTTS.md)) in terms of speech naturalness and speaker similarity, with +0.12 comparative mean option score (CMOS) and +0.93 similarity mean option score (SMOS) improvement on LibriSpeech.
+We evaluate ***VALL-E*** on [LibriSpeech (2015)](../../../Datasets/2015.04.19_LibriSpeech.md) and [VCTK (2016)](../../../Datasets/2012.08.00_VCTK.md) datasets, where all test speakers are unseen in the training corpus.
+***VALL-E*** significantly outperforms the state-of-the-art zero-shot TTS system ([YourTTS (2021)](../../E2E/2021.12.04_YourTTS.md)) in terms of speech naturalness and speaker similarity, with +0.12 comparative mean option score (CMOS) and +0.93 similarity mean option score (SMOS) improvement on LibriSpeech.
 ***VALL-E*** also beats the baseline on VCTK with+0.11 SMOS and +0.23 CMOS improvements.
 It even achieves a +0.04 CMOS score against ground truth, showing the synthesized speech of unseen speakers is as natural as human recordings on VCTK.
 Moreover, the qualitative analysis shows that ***VALL-E*** is able to synthesize diverse outputs with the same text and target speaker, which could benefit pseudo-data creation for the speech recognition task.
@@ -142,20 +142,20 @@ We encourage the reader to listen to our samples on the [demo page](https://aka.
 <table><tr><td width="50%">
 
 Current TTS methods can be categorized into cascaded and end-to-end methods.
-Cascaded TTS systems ([Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
-To tackle the drawbacks of the vocoder, end-to-end TTS models ([VITS (2021)](../E2E/2021.06.11_VITS.md), [DelightfulTTS2 (2022)](../TTS2_Acoustic/2022.07.11_DelightfulTTS2.md)) are proposed to jointly optimize the acoustic model and vocoder.
+Cascaded TTS systems ([Tacotron2 (2017)](../../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
+To tackle the drawbacks of the vocoder, end-to-end TTS models ([VITS (2021)](../../E2E/2021.06.11_VITS.md), [DelightfulTTS2 (2022)](../../TTS2_Acoustic/2022.07.11_DelightfulTTS2.md)) are proposed to jointly optimize the acoustic model and vocoder.
 In real scenarios, it is highly desirable to customize a TTS system to an arbitrary voice with rare enrolled recordings.
 Therefore, there is growing interest in the zero-shot multi-speaker TTS techniques, and most of work is done in the context of cascaded TTS systems.
-As the pioneers, [Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md) proposes speaker adaptation and speaker encoding approaches.
-In the line of speaker adaptation, the following work ([SEA (2018)](../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md); [AdaSpeech (2021)](../Acoustic/2021.03.01_AdaSpeech.md)) tries to improve the adaptation efficiency with less target speaker data and speaker-specific parameters.
-[Meta-TTS (2021)](../TTS2_Acoustic/2021.11.07_Meta-TTS.md) applies meta-learning on speaker adaptation, which only requires 5-shot to build a well-performed system.
+As the pioneers, [Arik (2018)](../../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md) proposes speaker adaptation and speaker encoding approaches.
+In the line of speaker adaptation, the following work ([SEA (2018)](../../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md); [AdaSpeech (2021)](../../Acoustic/2021.03.01_AdaSpeech.md)) tries to improve the adaptation efficiency with less target speaker data and speaker-specific parameters.
+[Meta-TTS (2021)](../../TTS2_Acoustic/2021.11.07_Meta-TTS.md) applies meta-learning on speaker adaptation, which only requires 5-shot to build a well-performed system.
 In parallel, speaker encoding-based methods achieved great progress in recent years.
-A speaker encoding based system contains a speaker encoder and a TTS component, where the speaker encoder could be pre-trained on the speaker verification task ([Jia (2018)](../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md)).
-In [Jia (2018)](../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md) and [Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md), the experiments show that the model is able to generate high-quality outputs with 3 seconds enrolled recordings for in-domain speakers.
-To improve the quality of unseen speakers, advanced speaker embedding models ([Cai (2018)](../_Full/2018.04.14_Exploring_the_Encoding_Layer_and_Loss_Function_in_End-to-End_Speaker_and_Language_Recognition_System.md)) can be employed, but it is still undesirable according to [Tan (2021)](../../Surveys/2021.06.29__Survey__A_Survey_on_Neural_Speech_Synthesis_(63P).md).
-Another way is to design advanced but complex speaker encoder ([AdaSpeech4 (2022)](../Acoustic/2022.04.01_AdaSpeech4.md)).
-Diffusion model based TTS ([Grad-TTS (2021)](../Acoustic/2021.05.13_Grad-TTS.md); [Guided-TTS (2021)](../TTS2_Acoustic/2021.11.23_Guided-TTS.md)) is also extended to zero-shot TTS ([Grad-StyleSpeech (2022)](../TTS2_Acoustic/2022.11.17_Grad-StyleSpeech.md)) and achieved good results.
-Compared to previous work ([FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)), our work follows the line of cascaded TTS but first uses audio codec code as intermediate representations.
+A speaker encoding based system contains a speaker encoder and a TTS component, where the speaker encoder could be pre-trained on the speaker verification task ([Jia (2018)](../../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md)).
+In [Jia (2018)](../../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md) and [Arik (2018)](../../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md), the experiments show that the model is able to generate high-quality outputs with 3 seconds enrolled recordings for in-domain speakers.
+To improve the quality of unseen speakers, advanced speaker embedding models ([Cai (2018)](../../_Full/2018.04.14_Exploring_the_Encoding_Layer_and_Loss_Function_in_End-to-End_Speaker_and_Language_Recognition_System.md)) can be employed, but it is still undesirable according to [Tan (2021)](../../Surveys/2021.06.29__Survey__A_Survey_on_Neural_Speech_Synthesis_(63P).md).
+Another way is to design advanced but complex speaker encoder ([AdaSpeech4 (2022)](../../Acoustic/2022.04.01_AdaSpeech4.md)).
+Diffusion model based TTS ([Grad-TTS (2021)](../../Acoustic/2021.05.13_Grad-TTS.md); [Guided-TTS (2021)](../../TTS2_Acoustic/2021.11.23_Guided-TTS.md)) is also extended to zero-shot TTS ([Grad-StyleSpeech (2022)](../../TTS2_Acoustic/2022.11.17_Grad-StyleSpeech.md)) and achieved good results.
+Compared to previous work ([FastSpeech (2019)](../../Acoustic/2019.05.22_FastSpeech.md); [VQTTS (2022)](../../E2E/2022.04.02_VQTTS.md)), our work follows the line of cascaded TTS but first uses audio codec code as intermediate representations.
 It is the first one that has strong in-context learning capabilities as GPT-3, which does not require fine-tuning, pre-designed features, or a complex speaker encoder.
 
 
@@ -167,18 +167,18 @@ It is the first one that has strong in-context learning capabilities as GPT-3, w
 
 <table><tr><td width="50%">
 
-Self-supervised learning is widely investigated in the field of speech understanding ([Wav2Vec2.0 (2020)](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md); [WavLM (2021)](../SpeechRepresentation/2021.10.26_WavLM.md)) and speech-to-speech generation ([GSLM (2021)](2021.02.01_GSLM.md); [AudioLM (2022)](2022.09.07_AudioLM.md)).
+Self-supervised learning is widely investigated in the field of speech understanding ([Wav2Vec2.0 (2020)](../../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../../SpeechRepresentation/2021.06.14_HuBERT.md); [WavLM (2021)](../../SpeechRepresentation/2021.10.26_WavLM.md)) and speech-to-speech generation ([GSLM (2021)](../2021.02.01_GSLM.md); [AudioLM (2022)](ST2S/2022.09.07_AudioLM.mdLM.md)).
 In the context of speech-to-speech generation, a hot topic is how to synthesize speech in a textless setting.
-[GSLM (2021)](2021.02.01_GSLM.md) proposes to synthesize speech based on [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) codes, and [Polyak (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) improves the performance by combining [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md) codes with codes of VQ-VAE and a speaker encoder.
-[AudioLM (2022)](2022.09.07_AudioLM.md) follows a similar way but use audio codecs ([SoundStream (2022)](../SpeechCodec/2021.07.07_SoundStream.md)) to synthesize speech, together with semantic codes.
-It should be noted that AudioLM is able to synthesize speech based on audio codecs without training an additional vocoder such as [HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md).
+[GSLM (2021)](../2021.02.01_GSLM.md) proposes to synthesize speech based on [HuBERT (2021)](../../SpeechRepresentation/2021.06.14_HuBERT.md) codes, and [Polyak (2021)](../../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) improves the performance by combining [HuBERT](../../SpeechRepresentation/2021.06.14_HuBERT.md) codes with codes of VQ-VAE and a speaker encoder.
+[AudioLM (2022)](ST2S/2022.09.07_AudioLM.mdLM.md) follows a similar way but use audio codecs ([SoundStream (2022)](../../../SpeechCodec/2021.07.07_SoundStream.mdto synthesize speech, together with semantic codes.
+It should be noted that AudioLM is able to synthesize speech based on audio codecs without training an additional vocoder such as [HiFi-GAN (2020)](../../Vocoder/2020.10.12_HiFi-GAN.md).
 AudioLM is a speech-to-speech model, whereas ***VALL-E*** is a TTS model, so we can explicitly control the content in speech synthesis.
 Another direction is to apply pre-training to the neural TTS.
-[Chung (2018)](../_Full/2018.08.30_Semi-Supervised_Training_for_Improving_Data_Efficiency_in_End-to-End_Speech_Synthesis.md) pre-trains speech decoder in TTS through autoregressive mel-spectrogram prediction.
-In [SpeechT5 (2021)](2021.10.14_SpeechT5.md), the authors propose a unified-modal encoder-decoder framework SpeechT5, which can leverage unlabeled speech and text data to pre-train all components of TTS model.
-[Tjandra (2019)](../_Full/2019.05.27_VQVAE_Unsupervised_Unit_Discovery_and_Multi-scale_Code2Spec_Inverter_for_Zerospeech_Challenge_2019.md) quantizes unlabeled speech into discrete tokens by a [VQ-VAE (2017)](../../Modules/VQ/2017.11.02_VQ-VAE.md) model, and train a model with the token-to-speech sequence.
+[Chung (2018)](../../_Full/2018.08.30_Semi-Supervised_Training_for_Improving_Data_Efficiency_in_End-to-End_Speech_Synthesis.md) pre-trains speech decoder in TTS through autoregressive mel-spectrogram prediction.
+In [SpeechT5 (2021)](../2021.10.14_SpeechT5.md), the authors propose a unified-modal encoder-decoder framework SpeechT5, which can leverage unlabeled speech and text data to pre-train all components of TTS model.
+[Tjandra (2019)](../../_Full/2019.05.27_VQVAE_Unsupervised_Unit_Discovery_and_Multi-scale_Code2Spec_Inverter_for_Zerospeech_Challenge_2019.md) quantizes unlabeled speech into discrete tokens by a [VQ-VAE (2017)](../../../Modules/VQ/2017.11.02_VQ-VAE.md) model, and train a model with the token-to-speech sequence.
 They demonstrate that the pre-trained model only requires a small amount of real data for fine-tuning.
-[A^3T (2022)](../SpeechRepresentation/2022.03.18_A^3T.md) proposes mask and reconstruction on mel spectrogram and showing better performance on speech editing and synthesis.
+[A^3T (2022)](../../SpeechRepresentation/2022.03.18_A^3T.md) proposes mask and reconstruction on mel spectrogram and showing better performance on speech editing and synthesis.
 Previous TTS pre-training work leverages less than 1K hours of data, whereas ***VALL-E*** is pre-trained with 60K hours of data.
 Furthermore, ***VALL-E*** is the first to use audio codec codes as intermediate representations, and emerge in-context learning capability in zero-shot TTS.
 
@@ -194,21 +194,21 @@ Since audio is typically stored as a sequence of 16-bit integer values, a genera
 In addition, the audio sample rate exceeding ten thousand leads to an extraordinarily long sequence length, making it more intractable for raw audio synthesis.
 To this end, speech quantization is required to compress integer values and sequence length.
 $\mu$-law transformation can quantize each timestep to 256 values and reconstruct high-quality raw audio.
-It is widely used in speech generative models, such as [WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md), but the inference speed is still slow since the sequence length is not reduced.
-Recently, vector quantization is widely applied in self-supervised speech models for feature extraction, such as [VQ-Wav2Vec (2019)](../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md) and [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md).
-The following work ([GSLM (2021)](2021.02.01_GSLM.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)) shows the codes from self-supervised models can also reconstruct content, and the inference speed is faster than [WaveNet](../Vocoder/2016.09.12_WaveNet.md).
-However, the speaker identity has been discarded and the reconstruction quality is low ([AudioLM (2022)](2022.09.07_AudioLM.md)).
-[AudioLM (2022)](2022.09.07_AudioLM.md) trains speech-to-speech language models on both k-me2022.09.07_AudioLM.md model and acoustic tokens from a neural codec model, leading to high-quality speech-to-speech generation.
+It is widely used in speech generative models, such as [WaveNet (2016)](../../Vocoder/2016.09.12_WaveNet.md), but the inference speed is still slow since the sequence length is not reduced.
+Recently, vector quantization is widely applied in self-supervised speech models for feature extraction, such as [VQ-Wav2Vec (2019)](../../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md) and [HuBERT (2021)](../../SpeechRepresentation/2021.06.14_HuBERT.md).
+The following work ([GSLM (2021)](../2021.02.01_GSLM.md); [VQTTS (2022)](../../E2E/2022.04.02_VQTTS.md)) shows the codes from self-supervised models can also reconstruct content, and the inference speed is faster than [WaveNet](../../Vocoder/2016.09.12_WaveNet.md).
+However, the speaker identity has been discarded and the reconstruction quality is low ([AudioLM (2022)](ST2S/2022.09.07_AudioLM.mdLM.md)).
+[AudioLM (2022)](ST2S/2022.09.07_AudioLM.mdLM.md) trains speech-to-speech language models on both k-me2022.09.07_AudioLM.md model and acoustic tokens from a neural codec model, leading to high-quality speech-to-speech generation.
 
-In this paper, we follow [AudioLM (2022)](2022.09.07_AudioLM.md) to leverage neural codec models to represent speech in discrete tokens.
+In this paper, we follow [AudioLM (2022)](ST2S/2022.09.07_AudioLM.mdLM.md) to leverage neural codec models to represent speech in discrete tokens.
 To compress audio for network transmission2022.09.07_AudioLM.md waveform into discrete acoustic codes and reconstruct high-quality waveform even if the speaker is unseen in training.
 Compared to traditional audio codec approaches, the neural-based codec is significantly better at low bitrates, and we believe the quantized tokens contain sufficient information about the speaker and recording conditions.
 Compared to other quantization methods,the audio codec shows the following advantages:
-1) It contains abundant speaker information and acoustic information, which could maintain speaker identity in reconstruction compared to [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) codes.
-2) There is an off-the-shelf codec decoder to convert discrete tokens into a waveform, without the additional efforts on vocoder training like VQ-based methods that operated on spectrum ([VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)).
-3) It could reduce the length of time steps for efficiency to address the problem in $\mu$-law transformation ([WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md)).
+1) It contains abundant speaker information and acoustic information, which could maintain speaker identity in reconstruction compared to [HuBERT (2021)](../../SpeechRepresentation/2021.06.14_HuBERT.md) codes.
+2) There is an off-the-shelf codec decoder to convert discrete tokens into a waveform, without the additional efforts on vocoder training like VQ-based methods that operated on spectrum ([VQTTS (2022)](../../E2E/2022.04.02_VQTTS.md)).
+3) It could reduce the length of time steps for efficiency to address the problem in $\mu$-law transformation ([WaveNet (2016)](../../Vocoder/2016.09.12_WaveNet.md)).
 
-We adopt a pre-trained neural audio codec model, [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md), as our tokenizer.
+We adopt a pre-trained neural audio codec model, [EnCodec (2022)](../../SpeechCodec/2022.10.24_EnCodec.md), as our tokenizer.
 EnCodec is a convolutional encoder-decoder model, whose input and output are both 24 kHz audio across variable bitrates.
 The encoder produces embeddings at 75 Hz for input waveforms at 24 kHz,which is a 320-fold reduction in the sampling rate.
 Each embedding is modeled by a *residual vector quantization (RVQ)*, in which we choose eight hierarchy quantizers with 1024 entries each as shown in [Fig.02]().
@@ -224,7 +224,7 @@ With the discrete codes from all quantizers, the convolutional decoder of EnCode
 
 </td></tr></table>
 
-![](Images/2023.01.05_VALL-E_Fig.02.png)
+![](../Images/2023.01.05_VALL-E_Fig.02.png)
 
 ## 4·Methodology: 方法
 
@@ -291,7 +291,7 @@ $$
 
 #### 4.2.1·Autoregressive Codec Language Modeling
 
-![](Images/2023.01.05_VALL-E_Fig.03.png)
+![](../Images/2023.01.05_VALL-E_Fig.03.png)
 
 <table><tr><td width="50%">
 
@@ -339,7 +339,7 @@ Specifically, we first tokenize the enrolled speech with the neural codec model 
 The embedded representations from all of the eight codebooks are summed up as the acoustic prompt $e_{\tilde{c}_t}=\sum_{j=1}^8 e_{\tilde{c}_{t,j}}$.
 To predict the acoustic tokens from the i-th codebook, the transformer input is the concatenation of $(\mathbf{e}_{\mathbf{x}}, \mathbf{e}_{\tilde{c}}, \mathbf{e}_{c_{:,<i}})$.
 The positional embeddings are also computed separately for prompts and the acoustic sequence.
-The current stage $i$ is injected into the network with [Adaptive Layer Normalization (2019)](../../Modules/Normalization/2019.11.16_AdaNorm.md) operator, i.e., $\text{AdaLN}(h, i) = a_i\text{LayerNorm}(h) + b_i$, where $h$ is the intermediate activations, $a_i$ and $b_i$ are obtained from a linear projection of the stage embedding.
+The current stage $i$ is injected into the network with [Adaptive Layer Normalization (2019)](../../../Modules/Normalization/2019.11.16_AdaNorm.md) operator, i.e., $\text{AdaLN}(h, i) = a_i\text{LayerNorm}(h) + b_i$, where $h$ is the intermediate activations, $a_i$ and $b_i$ are obtained from a linear projection of the stage embedding.
 Unlike AR, the NAR model allows each token to attend to all the input tokens in the self-attention layer.
 We also share the parameters of the acoustic embedding layer and the output prediction layer, which means the weights of the $j$-th prediction layer are the same as the $(j + 1)$-th acoustic embedding layer.
 
@@ -386,11 +386,11 @@ The inference process is the same as setting ***VALL-E***, except that the enrol
 
 <table><tr><td width="50%">
 
-We use [LibriLight (2019)](../../Datasets/2019.12.17_Libri-Light.md) as the training data which contains 60K hours of unlabelled speech from audiobooks in English.
+We use [LibriLight (2019)](../../../Datasets/2019.12.17_Libri-Light.md) as the training data which contains 60K hours of unlabelled speech from audiobooks in English.
 The number of distinct speakers is around 7000 in LibriLight.
 We train a hybrid DNN-HMM ASR model on 960 hours labeled LibriSpeech following Kaldi recipe.
 Once the hybrid model is trained, unlabeled speech data is decoded and transduced to the best phoneme-level alignment paths where the frameshift is 30ms.
-The [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) model is used to generate the acoustic code matrix for the 60K hours of data.
+The [EnCodec (2022)](../../SpeechCodec/2022.10.24_EnCodec.md) model is used to generate the acoustic code matrix for the 60K hours of data.
 
 </td><td>
 
@@ -418,7 +418,7 @@ We optimize the models with the AdamW optimizer, warm up the learning rate for t
 
 <table><tr><td width="50%">
 
-We choose the SOTA zero-shot TTS model [YourTTS (2021)](../E2E/2021.12.04_YourTTS.md) as the baseline, which is trained on a combined dataset of [VCTK (2016)](../../Datasets/2012.08.00_VCTK.md), [LibriTTS (2019)](../../Datasets/2019.04.05_LibriTTS.md), and [TTS-Portuguese (2020)](../../Datasets/2020.05.11_TTS-Portuguese.md).
+We choose the SOTA zero-shot TTS model [YourTTS (2021)](../../E2E/2021.12.04_YourTTS.md) as the baseline, which is trained on a combined dataset of [VCTK (2016)](../../../Datasets/2012.08.00_VCTK.md), [LibriTTS (2019)](../../../Datasets/2019.04.05_LibriTTS.md), and [TTS-Portuguese (2020)](../../../Datasets/2020.05.11_TTS-Portuguese.md).
 We use their released checkpoint in [Github](https://github.com/Edresson/YourTTS).
 
 </td><td>
@@ -429,7 +429,7 @@ We use their released checkpoint in [Github](https://github.com/Edresson/YourTTS
 
 <table><tr><td width="50%">
 
-We employ the SOTA speaker verification model, WavLM-TDNN ([WavLM (2021)](../SpeechRepresentation/2021.10.26_WavLM.md)), to evaluate the speaker similarity between prompt (the decompressed enrolled speech) and synthesized speech.
+We employ the SOTA speaker verification model, WavLM-TDNN ([WavLM (2021)](../../SpeechRepresentation/2021.10.26_WavLM.md)), to evaluate the speaker similarity between prompt (the decompressed enrolled speech) and synthesized speech.
 WavLM-TDNN achieved the top rank at the VoxSRC Challenge 2021 and 2022 leaderboards.
 It reached an average Equal Error Rate (EER) of 0.383, 0.480, and 0.986 on Vox1-O, Vox1-E, and Vox1-H respectively.
 The similarity score predicted by WavLM-TDNN is in the range of [−1, 1], where a larger value indicates a higher similarity of input samples.
@@ -437,7 +437,7 @@ The similarity score predicted by WavLM-TDNN is in the range of [−1, 1], where
 We also evaluate the synthesis robustness of our model.
 Neural TTS systems suffer from the robustness issue, which sometimes has deletion, insertion, and replacement errors due to wrong attention alignments.
 We perform ASR on the generated audio and calculate the word error rate (WER) with respect to the original transcriptions.
-In this experiment, we employ the [HuBERT-Large (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) model fine-tuned on LibriSpeech 960h as the ASR model, which is a CTC-based model without language model fusion.
+In this experiment, we employ the [HuBERT-Large (2021)](../../SpeechRepresentation/2021.06.14_HuBERT.md) model fine-tuned on LibriSpeech 960h as the ASR model, which is a CTC-based model without language model fusion.
 
 </td><td>
 
@@ -447,7 +447,7 @@ In this experiment, we employ the [HuBERT-Large (2021)](../SpeechRepresentation/
 
 <table><tr><td width="50%">
 
-We calculate the [comparative mean option score (CMOS)](../../Evaluations/CMOS.md) and [similarity mean option score (SMOS)](../../Evaluations/SMOS.md) by crowdsourcing, where 12 and 6 native speakers are invited as CMOS and SMOS contributors.
+We calculate the [comparative mean option score (CMOS)](../../../Evaluations/CMOS.md) and [similarity mean option score (SMOS)](../../../Evaluations/SMOS.md) by crowdsourcing, where 12 and 6 native speakers are invited as CMOS and SMOS contributors.
 The scale of SMOS is from 1 to 5 with 0.5-point increments.
 CMOS ranges from -3 (the new system is much worse than baseline) to 3 (the new system is much better than baseline) with intervals of 1.
 CMOS is an indicator of speech naturalness, and SMOS measures whether the speech is similar to the original speaker’s voice.
@@ -460,8 +460,8 @@ CMOS is an indicator of speech naturalness, and SMOS measures whether the speech
 
 <table><tr><td width="50%">
 
-We first use [LibriSpeech (2015)](../../Datasets/2015.04.19_LibriSpeech.md) for zero-shot TTS evaluation, since there is no speaker overlap between LibriLight training data and LibriSpeech test-clean data.
-Following [AudioLM (2022)](2022.09.07_AudioLM.md), we use the samples from LibriSpeech test-clean with lengths between 4 and 10 seconds, resulting in a 2.2 hours subset.
+We first use [LibriSpeech (2015)](../../../Datasets/2015.04.19_LibriSpeech.md) for zero-shot TTS evaluation, since there is no speaker overlap between LibriLight training data and LibriSpeech test-clean data.
+Following [AudioLM (2022)](ST2S/2022.09.07_AudioLM.mdLM.md), we use the samples from LibriSpeech test-clean with lengths between 4 and 10 seconds, resulting in a 2.2 hours subset.
 For each sample synthesis, ***VALL-E*** randomly choose another utterance of the same speaker and crop a 3-seconds speech segment as the enrolled speech.
 Each experiment runs three times and the average score is reported.
 VALL-E-continual uses the first 3 seconds of the ground-truth speech as enrolled speech.
@@ -472,7 +472,7 @@ To compare the speaker similarity, we use speech pairs from the same speaker in 
 Compared with the YourTTS baseline, our model is significantly better in both robustness and speaker similarity, showing that our generated speech is highly faithful to the given text and the given enrolled speech.
 Furthermore, the word error rate can be further reduced in ***VALL-E***-continual setting, because the acoustic tokens for the first 3 seconds are extracted from the ground truth.
 We also compare the robustness with other speech-to-speech LM-based generation models, GSLM and AudioLM, which use audio latent codes as input.
-GSLM uses HuBERT code as input and reconstructs the waveform with the [Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md) model and the [WaveGlow (2018)](../Vocoder/2018.10.31_WaveGlow.md) vocoder.
+GSLM uses HuBERT code as input and reconstructs the waveform with the [Tacotron2 (2017)](../../Acoustic/2017.12.16_Tacotron2.md) model and the [WaveGlow (2018)](../../Vocoder/2018.10.31_WaveGlow.md) vocoder.
 We run their open-sourced code using the released model and evaluate the results.
 Since the HuBERT codes discard the speaker identity, it achieves a poor speaker score.
 For the AudioLM, we list their WER score reported in their paper, which is obtained by a Conformer Transducer model.
@@ -581,9 +581,9 @@ We show consistency on our demo page.
 <table><tr><td width="50%">
 
 Emotional TTS is a classic subtopic of speech synthesis, which synthesizes speech with a required emotion.
-Traditional methods ([Lei (2021)](../_Full/2020.11.17_Fine-grained_Emotion_Strength_Transfer_Control_and_Prediction_for_Emotional_Speech_Synthesis.md)) always train a model on a supervised emotional TTS dataset, where the speech corresponds to a transcription and an emotion label.
+Traditional methods ([Lei (2021)](../../_Full/2020.11.17_Fine-grained_Emotion_Strength_Transfer_Control_and_Prediction_for_Emotional_Speech_Synthesis.md)) always train a model on a supervised emotional TTS dataset, where the speech corresponds to a transcription and an emotion label.
 We find that ***VALL-E*** can preserve the emotion in the prompt at a zero-shot setting.
-We select acoustic prompts from [EmoV-DB (2018)](../../Datasets/2018.06.25_EmoV-DB.md), a dataset containing speech with five emotions, ***VALL-E*** is able to keep the same emotion of the prompt in speech synthesis, even if the model is not fine-tuned on an emotional TTS dataset.
+We select acoustic prompts from [EmoV-DB (2018)](../../../Datasets/2018.06.25_EmoV-DB.md), a dataset containing speech with five emotions, ***VALL-E*** is able to keep the same emotion of the prompt in speech synthesis, even if the model is not fine-tuned on an emotional TTS dataset.
 We put audio samples on our demo page.
 
 </td><td>
