调整 SPEAR-TTS 分类

--- a/Models/SpeechLM/ST2S/2023.02.07_SPEAR-TTS.md
+++ b/Models/SpeechLM/ST2S/2023.02.07_SPEAR-TTS.md
@@ -20,8 +20,8 @@
   - [Github]
   - [Demo](https://google-research.github.io/seanet/speartts/examples/)
 - 文件:
-  - [ArXiv](_PDF/2302.03540v1__SPEAR-TTS__Speak_Read_&_Prompt__High-Fidelity_TTS_with_Minimial_Supervision.pdf)
-  - [Publication](_PDF/2302.03540p0__SPEAR-TTS__TACL2023.pdf)
+  - [ArXiv](../_PDF/2302.03540v1__SPEAR-TTS__Speak_Read_&_Prompt__High-Fidelity_TTS_with_Minimial_Supervision.pdf)
+  - [Publication](../_PDF/2302.03540p0__SPEAR-TTS__TACL2023.pdf)
 
 </details>
 
