--- a/Models/SpeechLM/ST2S/2023.03.07_VALL-E_X.md
+++ b/Models/SpeechLM/ST2S/2023.03.07_VALL-E_X.md
@@ -24,7 +24,7 @@
   - [Github Reproduce](https://github.com/Plachtaa/VALL-E-X)
   - [Demo](https://aka.ms/vallex)
 - 文件:
-  - [ArXiv](_PDF/2303.03926v1__VALL-E_X__Speak_Foreign_Languages_with_Your_Own_Voice_Cross-Lingual_Neural_Codec_Language_Modeling.pdf)
+  - [ArXiv](../_PDF/2303.03926v1__VALL-E_X__Speak_Foreign_Languages_with_Your_Own_Voice_Cross-Lingual_Neural_Codec_Language_Modeling.pdf)
   - [Publication] #TODO
 
 </details>
