--- a/Models/SpeechLM/ST2ST/2023.10.07_LauraGPT.md
+++ b/Models/SpeechLM/ST2ST/2023.10.07_LauraGPT.md
@@ -26,33 +26,52 @@
   - [Github]
   - [Demo](https://lauragpt.github.io)
 - 文件:
-  - [ArXiv](_PDF/2310.04673v4__LauraGPT__Listen_Attend_Understand_and_Regenerate_Audio_with_GPT.pdf)
+  - [ArXiv](../_PDF/2310.04673v4__LauraGPT__Listen_Attend_Understand_and_Regenerate_Audio_with_GPT.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
 
-Generative Pre-trained Transformer~(GPT) models have achieved remarkable performance on various natural language processing tasks, and have shown great potential as backbones for audio-and-text large language models (LLMs).
+<table><tr><td width="50%">
+
+**Generative Pre-trained Transformer (GPT)** models have achieved remarkable performance on various natural language processing tasks, and have shown great potential as backbones for audio-and-text large language models (LLMs).
 Previous mainstream audio-and-text LLMs use discrete audio tokens to represent both input and output audio; however, they suffer from performance degradation on tasks such as automatic speech recognition, speech-to-text translation, and speech enhancement over models using continuous speech features.
-In this paper, we propose ***LauraGPT***, a novel unified audio-and-text GPT-based LLM for audio recognition, understanding, and generation.
+In this paper, we propose ***LauraGPT***, a novel unified audio-and-text **GPT**-based LLM for audio recognition, understanding, and generation.
 ***LauraGPT*** is a versatile LLM that can process both audio and text inputs and generate outputs in either modalities.
 We propose a novel data representation that combines continuous and discrete features for audio: ***LauraGPT*** encodes input audio into continuous representations using an audio encoder and generates output audio from discrete codec codes.
 We propose a one-step codec vocoder to overcome the prediction challenge caused by the multimodal distribution of codec tokens.
 We fine-tune ***LauraGPT*** using supervised multi-task learning.
 Extensive experiments show that ***LauraGPT*** consistently achieves comparable to superior performance compared to strong baselines on a wide range of audio tasks related to content, semantics, paralinguistics, and audio-signal analysis, such as automatic speech recognition, speech-to-text translation, text-to-speech synthesis, speech enhancement, automated audio captioning, speech emotion recognition, and spoken language understanding.
 
+</td><td>
+
+**生成式预训练 Transformer (Generative Pre-trained Transformer, GPT)** 模型在各种自然语言处理任务中取得了显著的表现, 并展现了作为音频与文本大型语言模型骨干的巨大潜力.
+之前主流的音频与文本 LLM 使用离散音频标记表示输入和输出音频, 但在自动语音识别, 语音到文本翻译和语音增强等任务中表现较差, 相较于使用连续语音特征的模型.
+
+在本文中, 我们提出了 ***LauraGPT***, 一种新型的统一音频与文本 **GPT**-基础的LLM, 用于音频识别, 理解和生成.
+***LauraGPT*** 是一个多功能的LLM, 可以处理音频和文本输入, 并生成两种模态的输出.
+
+我们提出了一种新颖的数据表示方法, 将连续和离散特征相结合用于音频：
+***LauraGPT*** 使用音频编码器将输入音频编码为连续表示, 并从离散编解码器编码生成输出音频.
+我们提出了一种一步式编解码声码器, 以克服因编解码器 Token 的多模态分布而产生的预测挑战.
+
+我们使用有监督的多任务学习对 ***LauraGPT*** 进行微调.
+大量实验表明, ***LauraGPT*** 在与内容、语义、副语言学和音频信号分析相关的广泛音频任务中, 持续地与强基线相比取得相当甚至更优的表现, 例如自动语音识别、语音到文本翻译、文本到语音合成、语音增强、自动音频字幕生成、语音情感识别和口语语言理解.
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
 
 Large language models (LLMs) are neural networks that generate natural language texts based on a given context.
 LLMs can learn from massive amounts of text data and mimic human language to acquire human knowledge.
-LLMs such as [GPT-4](../TextLM/2023.03.15_GPT-4.md), [PaLM2](../TextLM/2023.05.17_PaLM2.md), [LLaMA](../TextLM/2023.02.27_LLaMA.md) have demonstrated impressive capabilities across various domains, exhibiting zero-shot generalization without the need for task-specific fine-tuning.
+LLMs such as [GPT-4](../../TextLM/2023.03.15_GPT-4.md), [PaLM2](../../TextLM/2023.05.17_PaLM2.md), [LLaMA](../../TextLM/2023.02.27_LLaMA.md) have demonstrated impressive capabilities across various domains, exhibiting zero-shot generalization without the need for task-specific fine-tuning.
 However, these models are primarily limited to processing text data.
 
 Recent research aims to seamlessly integrate text and audio since they are two important modalities for human communication.
 These efforts include
-- **Audio-to-Text LLMs** ([Whisper](../SpeechLM/2022.12.06_Whisper.md); [USM](../SpeechLM/2023.03.02_Google_USM.md); [Pengi](../SpeechLM/2023.05.19_Pengi.md); [UniverSLU](../SpeechLM/2023.10.04_UniverSLU.md); [SALMONN](2023.10.20_SALMONN.md); [Qwen-Audio](2023.11.14_Qwen-Audio.md)), which can convert audio input into text and perform tasks such as automatic speech recognition (ASR) and spoken language understanding (SLU);
-- **Text-to-Audio LLMs** ([UniAudio](../SpeechLM/2023.10.01_UniAudio.md); [Audiobox](2023.12.25_Audiobox.md); [AudioGen](../SpeechLM/2022.09.30_AudioGen.md); [AudioLDM2](../Diffusion/2023.08.10_AudioLDM2.md); [Make-An-Audio](../Diffusion/2023.01.30_Make-An-Audio.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)), which can convert text input into audio and perform tasks such as text-to-speech synthesis (TTS) and text-to-music synthesis.
+- **Audio-to-Text LLMs** (**Whisper**; [USM](../../ASR/2023.03.02_Google_USM.md); [Pengi](../ST2T/2023.05.19_Pengi.md); ../2023.10.04_UniverSLU.mdUniverSLU.md); [SALMONN](../../SpokenDialogue/2023.10.20_SALMONN.md); [Qwen-Audio](../../SpokenDialogue/2023.11.14_Qwen-Audio.md)), which can convert audio input into text and perform tasks such as automatic speech recognition (ASR) and spoken language understanding (SLU);
+- **Text-to-Audio LLMs** ([UniAudio](../2023.10.01_UniAudio.md); [Audiobox](2023.12.25_A../2023.12.25_Audiobox.md](ST2S/2022.09../ST2S/2022.09.30_AudioGen.md2](../Diffusion../../Diffusion/2023.08.10_AudioLDM2.mdAudio](../Diffusion../../Diffusion/2023.01.30_Make-An-Audio.md*, which can convert text input into audio and perform tasks such as text-to-speech synthesis (TTS) and text-to-music synthesis.
 An emerging line of research focuses on develop more universal and comprehensive **Audio-and-Text LLMs**~\citep{DBLP:conf/acl/AoWZ0RW0KLZWQ0W22,DBLP:journals/corr/abs-2105-03070,DBLP:journals/corr/abs-2305-11000,DBLP:journals/corr/abs-2305-16107,DBLP:journals/corr/abs-2306-12925,DBLP:journals/corr/abs-2304-12995}, which can support audio-and-text tasks, that is, process and generate both audio and text and perform tasks such as speech enhancement (SE) and speech-to-speech translation (S2ST), in addition to tasks supported by audio-to-text and text-to-audio LLMs.
 Audio-to-text and text-to-audio LLMs can be considered as subsets of audio-and-text LLMs.
 
@@ -64,7 +83,7 @@ Decoder-only audio-and-text LLMs~\citep{DBLP:journals/corr/abs-2305-11000,DBLP:j
 These models convert continuous audio into discrete tokens and integrate text and audio tokens into unified vocabulary.
 These models suffer from information loss from quantization of speech signals into discrete tokens, which leads to notable performance degradation on ASR compared to models using continuous speech features~\citep{DBLP:journals/corr/abs-2311-04534,DBLP:journals/corr/abs-2305-18108,DBLP:journals/corr/abs-2309-07377,DBLP:journals/corr/abs-2309-10922}.
 In this paper, we focus on improving the second category of unified Audio-and-Text LLMs.
-Moreover, recent advances in audio generation from unified audio-and-text LLMs ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md))\citep{DBLP:journals/corr/abs-2305-16107} discretize speech into codec codes, then use an autoregressive language model (LM) to predict output tokens from the first quantizer and use a non-autoregressive model to predict tokens from the other quantizers individually.
+Moreover, recent advances in audio generation from unified audio-and-text LLMs (**VALL-E**; {DBLP:journals/corr/abs-2305-16107}) discretize speech into codec codes, then use an autoregressive language model (LM) to predict output tokens from the first quantizer and use a non-autoregressive model to predict tokens from the other quantizers individually.
 One limitation of this mechanism is that it needs many prediction steps (hence called multi-step audio synthesis scheme) to generate good quality speech.
 Another limitation is that predicting the indices of the other codec groups is challenging due to the multi-modal distribution nature of codec tokens~\citep{DBLP:journals/icassp/lmcodec}.
 
@@ -87,21 +106,21 @@ The results are remarkable since existing general speech models either focus sol
 ### Audio-to-Text LLMs
 
 Audio-to-Text LLMs can generate text from audio inputs.
-[Whisper](../SpeechLM/2022.12.06_Whisper.md) and [USM](../SpeechLM/2023.03.02_Google_USM.md) can perform speech recognition and translation across multiple languages and domains.
-[Pengi](../SpeechLM/2023.05.19_Pengi.md) is an audio LM that formulates audio tasks as text-generation tasks.
-[UniverSLU](../SpeechLM/2023.10.04_UniverSLU.md) is a universal SLU model that supports various speech classification and sequence generation tasks.
-[SALMONN](2023.10.20_SALMONN.md) and [Qwen-Audio](2023.11.14_Qwen-Audio.md) integrate pre-trained text LLMs with separate speech and audio encoders into a single multimodal model.
+**Whisper** and [USM](../../ASR/2023.03.02_Google_USM.md) can perform speech recognition and translation across multiple languages and domains.
+[Pengi](../ST2T/2023.05.19_Pengi.md) is an audio LM that formulates audio tasks as text-generation tasks.
+[UniverSLU](../2023.10.04_UniverSLU.md) is a universal SLU model that supports various speech classification and sequence generation tasks.
+[SALMONN](../../SpokenDialogue/2023.10.20_SALMONN.md) and [Qwen-Audio](../../SpokenDialogue/2023.11.14_Qwen-Audio.md) integrate pre-trained text LLMs with separate speech and audio encoders into a single multimodal model.
 
 ### Text-to-Audio LLMs
 
 Text-to-Audio LLMs can convert text input into audio output and perform tasks such as TTS or text-to-music synthesis.
 Recently, two prominent categories of approaches have emerged for generating audio from text prompts.
-In the first category, continuous representations such as utterance-level embeddings (DBLP:journals/corr/abs-2206-04769, DBLP:conf/icml/LiuCYMLM0P23; [Make-An-Audio](../Diffusion/2023.01.30_Make-An-Audio.md)) and Mel-frequency spectrograms~\citep{DBLP:journals/corr/abs-2305-15255} are used as the targets.
+In the first category, continuous representations such as utterance-level embeddings (DBLP:journals/corr/abs-2206-04769, DBLP:conf/icml/LiuCYMLM0P23; [Make-An-Audio](../../Diffusion/2023.01.30_Make-An-Audio.md)) and Mel-frequency spectrograms~\citep{DBLP:journals/corr/abs-2305-15255} are used as the targets.
 However, continuous representations present a challenge for unified modeling of text and audio within a single LM.
-In the second category, discrete codec tokens are employed as audio representations and generated by diffusion models~\citep{DBLP:journals/taslp/YangYWWWZY23} or autoregressive LMs ([AudioGen](../SpeechLM/2022.09.30_AudioGen.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [MusicGen](2023.06.08_MusicGen.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)).
-Among models in the second category, in models such as [AudioGen](../SpeechLM/2022.09.30_AudioGen.md), [AudioLM](../SpeechLM/2022.09.07_AudioLM.md), and [MusicGen](2023.06.08_MusicGen.md), multiple output heads are used after the LM to predict synchronized or delayed groups of codec tokens.
+In the second category, discrete codec tokens are employed as audio representations and generated by diffusion models~\citep{DBLP:journals/taslp/YangYWWWZY23} or autoregressive LMs ([AudioGen](../ST2S/2022.09.30_AudioGen.md); [AudioLM](ST2S/20ST2S/2022.09.07_AudioLM.md2023.06.08_MusicGen.md); [VALL-E](../Sp[VST2S/2023.01.05_VALL-E.md)
+Among models in the second category, in models such as [AudioGen](../ST2S/2022.09.30_AudioGen.md), [AudioLM](ST2S/20ST2S/2022.09.07_AudioLM.mden](2023.06.08_MusicGen.md), multiple output heads are used after the LM to predict synchronized or delayed groups of codec tokens.
 However, this mechanism is only suitable for audio generation and may not be applicable to diverse audio-and-text tasks.
-Alternatively, in [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), the LM predicts output tokens of the first quantizer, while tokens of the remaining quantizers are predicted by a non-autoregressive model one by one.
+Alternatively, in [VALL-E](ST2S/2023.01.05_VALL-E.mdLM predicts output tokens of the first quantizer, while tokens of the remaining quantizers are predicted by a non-autoregressive model one by one.
 This mechanism requires numerous prediction procedures to generate acceptable speech quality.
 Moreover, the indices of the remaining codec groups are challenging to predict due to the multi-modal distribution nature of codec tokens~\citep{DBLP:journals/icassp/lmcodec}.
 
@@ -251,10 +270,10 @@ The baseline for each task is chosen to facilitate fair comparison with ***Laura
 We cite the SOTA results to validate that ***LauraGPT*** consistently performs competitively on all the speech recognition, understanding, and generation tasks and the baselines are competitive.
 However, ***LauraGPT*** results cannot be fairly compared to the SOTA results.
 Specifically, QwenAudio achieves SOTA performance on most speech understanding tasks, but compared to ***LauraGPT***, QwenAudio uses a much larger LLM ($\sim$7B VS.
-our 1.8B LLM), and uses the Whisper audio encoder trained on a large amount of ASR data while we use a Conformer encoder trained on much less data.
+our 1.8B LLM), and uses the **Whisper** audio encoder trained on a large amount of ASR data while we use a Conformer encoder trained on much less data.
 Moreover, QwenAudio does not support speech generative tasks hence cannot handle SE and TTS tasks.
 Paraformer-large and UniverSLU achieve SOTA results on AISHELL-2 test-ios for Chinese ASR and on SLURP test for SLU; however, they only support single tasks and also train on more data than ***LauraGPT*** on the corresponding task.
-Appendix~\ref{appendix:comparison-other-text-audio-model} shows that ***LauraGPT*** greatly outperforms Whisper Large V2 on Chinese ASR test sets while the gap on English ASR test sets are primarily attributed to the much smaller English data used for training ***LauraGPT***.
+Appendix~\ref{appendix:comparison-other-text-audio-model} shows that ***LauraGPT*** greatly outperforms **Whisper Large V2** on Chinese ASR test sets while the gap on English ASR test sets are primarily attributed to the much smaller English data used for training ***LauraGPT***.
 For TTS, the SOTA VALL-E Phone outperforms baseline VALL-E Token, suggesting the importance of text representation for TTS.
 (We re-implement two VALL-E models with 0.34B trainable parameters, both trained with the same data as ***LauraGPT***.
 VALL-E Phone uses phonemes as the text input representation, while VALL-E Token uses WordPiece tokens from the text tokenizer.)
@@ -280,7 +299,7 @@ Although the performance degradation can be reduced by using more quantizers (mo
 
 #### Comparison on Audio Synthesis Schemes
 
-[VALL-E](../SpeechLM/2023.01.05_VALL-E.md) introduces a commonly used scheme formulating audio synthesis as a classification problem: A neural network is shared to predict the codec tokens in the following group with the previous ones as inputs and synthesizing target audio requires multiple steps or iterations to achieve a reasonable speech quality.
+[VALL-E](ST2S/2023.01.05_VALL-E.mdduces a commonly used scheme formulating audio synthesis as a classification problem: A neural network is shared to predict the codec tokens in the following group with the previous ones as inputs and synthesizing target audio requires multiple steps or iterations to achieve a reasonable speech quality.
 In contrast, our one-step codec vocoder formulates audio synthesis as a regression problem.
 As described in Section~\ref{sec:codec_vocoder}, our one-step codec vocoder simplifies audio synthesis into a single feed-forward calculation and overcomes the prediction challenge caused by the multimodal distribution of codec tokens.
 Table~\ref{tab:comp-audio-syn-se} shows that our one-step codec vocoder greatly outperforms the multi-step scheme in terms of content consistency (CER, WER) and speech quality (PESQ), while obtaining the same intelligibility (STOI).
