--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -21,7 +21,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv](2025.02.10__2502.06490v1__Recent_Advances_in_Discrete_Speech_Tokens_A_Review.pdf)
+  - [ArXiv](2025.02.10__2502.06490v2__Recent_Advances_in_Discrete_Speech_Tokens_A_Review.pdf)
   - [Publication] #TODO
 
 </details>
@@ -52,6 +52,74 @@ Furthermore, we identify persistent challenges in the field and propose potentia
 ## 1·Introduction: 引言
 
 <table><tr><td width="50%">
+
+The rapid advancement of large language models (LLMs) in natural language processing has revolutionized speech generation tasks[^cui2024recent], [^ji2024wavchat], with speech being tokenized and modeled using decoder-only Transformers[^transformer].
+Efforts starting from GSLM[^lakhotia2021generative] and AudioLM[^borsos2023audiolm] aim to develop text-free spoken LLMs, akin to how current LLM-powered chatbots enable text-based interactions.
+Other works, including VALL-E[^valle] and VioLA[^wang2024viola], extend this approach to conditional speech generation tasks, such as zero-shot text-to-speech and speech translation.
+However, this paradigm requires data to be tokenized, as LLMs typically process discrete data only.
+Textual tokens naturally meet this requirement because they are designed as discrete units separated by clear boundaries, whereas raw speech signals are continuous and boundary-less.
+Therefore, a necessary step before applying speech data to LLM is the \textbf{tokenization of speech}, whose goal is:
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+*To convert long speech waveforms into short discrete tokens for downstream tasks. These tokens should be compatible with the underlying textual representations, especially for language modeling approaches targeted at speech.*
+
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+As a result, significant efforts have been directed towards developing efficient and powerful speech tokenization methods. Generally, these methods are based on two distinct principles, giving rise to two types of speech tokens: acoustic tokens and semantic tokens.
+Acoustic tokens are derived from neural codecs designed to encode speech at a low bitrate while preserving as much information as possible. In contrast, semantic tokens originate from speech self-supervised learning (SSL)[^mohamed2022self], which aims to learn a more phonetic or semantic representation space, making it easier for speech recognition.
+These two nearly independent lines of research magically intersect in the context of language modeling for speech.
+Now, there are also efforts that try to design a speech tokenizer that accomplishes the two objectives simultaneously[^zhang2024speechtokenizer], [^kyutai2024moshi].
+
+Consequently, speech tokenization has become a core problem of speech processing under the new paradigm, with versatile downstream applications, as shown in Figure.01.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+Despite the rapid development and numerous recent works, a comprehensive taxonomy of methodologies in discrete speech tokens has not been clearly constructed.
+Existing reviews[^mohamed2022self], [^anees2024speech], [^wu2024towards], [^cui2024recent], [^kim2024neural], [^ji2024wavchat] in this field overlook the diverse categories and methodologies in both acoustic and semantic tokens.
+- For example, [^cui2024recent], [^ji2024wavchat] focus primarily on methods in spoken language modeling, providing only brief descriptions of some speech tokens used in existing models.
+- The taxonomy of neural audio codecs has been summarized in [^wu2024towards], [^du2025codecfake], but the realm of semantic tokens is still overlooked.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+In this review, we provide a comprehensive overview of the concepts, methods, and characteristics of various types of discrete speech tokens, with their applications in spoken language understanding, speech generation, and spoken dialogue models.
+We hope that through this review, the community can have a clear understanding of the current development and key technologies of discrete speech tokens, so as to promote further research in the future.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+Our contributions are summarized as follows:
+- This review is the first to focus specifically on discrete speech tokens with sufficient depth in the LLM era.
+- We construct a comprehensive taxonomy of current research on discrete speech tokens and meticulously review the motivation, representative approaches, and challenges in each sub-category.
+- We provide a unified comparison of different types of discrete speech tokens in terms of reconstruction and voice conversion performance, covering both acoustic and semantic tokens.
+- We summarize the current challenges and potential future directions for discrete speech tokens, including decoupled and variable frame rate tokens.
+
+The structure of this review is shown in Figure.02.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+Following [^borsos2023audiolm], [^kharitonov2023speak], [^yang2024towards], we classify discrete speech tokens into acoustic and semantic tokens based on their principles.
+We will characterize the two types of tokens both by conceptual descriptions and unified experimental comparisons.
+
+</td><td>
 
 </td></tr></table>
 
@@ -84,3 +152,22 @@ Furthermore, we identify persistent challenges in the field and propose potentia
 <table><tr><td width="50%">
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^anees2024speech]:
+[^borsos2023audiolm]:
+[^cui2024recent]:
+[^du2025codecfake]:
+[^ji2024wavchat]:
+[^kharitonov2023speak]:
+[^kim2024neural]:
+[^kyutai2024moshi]:
+[^lakhotia2021generative]:
+[^mohamed2022self]:
+[^transformer]:
+[^valle]:
+[^wang2024viola]:
+[^wu2024towards]:
+[^yang2024towards]:
+[^zhang2024speechtokenizer]:
