更新 Survey 声学Token

--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -279,11 +279,89 @@ Such order of importance can also be enforced in GVQ by a "nested dropout" trick
 
 </td></tr></table>
 
-## 3·Methodology: 方法
+## 3·Speech Tokenization Methods: Acoustic Tokens
 
 <table><tr><td width="50%">
 
+Acoustic tokens, also known as \textit{speech codecs}, refer to the discrete representations optimized mainly for signal compression and reconstruction.
+The audio codec technology arises long ago.
+Traditional codecs, including MP3~\cite{rfc5219}, Opus~\cite{Valin2012DefinitionOT} and EVS~\cite{dietz2015overview}, typically take advantage of signal processing algorithms to improve quality and lower the bitrate.
+
+In the deep learning era, numerous codec models based on neural networks have emerged.
+These models typically consist of an encoder that compresses speech signals and a decoder that reconstructs the speech signals, with a quantizer situated between the two.
+The quantizer is also parameterized and jointly trained with the whole network in an end-to-end manner.
+The codebook indices produced by the quantizer are referred to as acoustic tokens.
+To improve the representation ability of discrete VQ spaces and thus obtain better codec performance, RVQ, GVQ, GRVQ and FSQ tricks are commonly applied in the quantization module.
+
+We list the VQ method, number of quantizers $Q$, frame rate $F$, vocabulary size $V$ for each quantizer, and the resulting bitrate of existing neural acoustic speech tokens in Table.\ref{tab:acoustic-metadata}.
+
+</td><td>
+
 </td></tr></table>
+
+### Model Architectures
+
+<table><tr><td width="50%">
+
+Although acoustic codec models differ from one to one regarding their purposes, most of them share a similar encoder-quantizer-decoder framework.
+With audio clip $\bm x$ that can either be time-domain sampling points, frequency-domain features or even other machine learning features, an encoder $f_\theta(\cdot)$ transforms it to $f_\theta(\bm x)$ in a continuous latent vector space.
+The encoder $f_\theta(\cdot)$ will usually perform downsampling to reduce the temporal length of the input signals, especially for waveform inputs.
+A VQ module $q_\phi(\cdot)$ discretizes $f_\theta(\bm x)$ into tokens and corresponding codebook vectors $\bm c$.
+A decoder $g_\psi(\cdot)$ then uses $\bm c$ to reconstruct $\hat {\bm x}$, and a certain distance metric of $d(\bm x, \hat{\bm x})$ is usually optimized.
+There are two major paradigms for designing the encoder, decoder, and quantizers, which can be summarized as diagrams in Fig.\ref{fig:acoustic-paradigms}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+#### VQ-GAN
+
+VQ-GAN~\cite{esser2021taming} is a very commonly adopted framework of acoustic tokens that trains a VQ-VAE with GAN objectives.
+Besides the original reconstruction and VQ objectives in a VQ-VAE, VQ-GAN uses discriminators $d_\xi(\bm x, \hat{\bm x})$ to distinguish real and reconstructed data that adversarially train the generator network composed of $f_\theta,q_\phi$, and $g_\psi$. In acoustic tokens, there are usually multiple discriminators, e.g. multi-resolution and multi-scale STFT discriminators from the neural vocoder researches~\cite{kumar2019melgan,jang21_interspeech}.
+The generator architecture of VQ-GAN-based acoustic tokens has multiple choices, with the three most representative ones visualized in Fig.\ref{fig:generator}: CNN-based, Transformer-based, and U-Net-based.
+
+The CNN-based generator is the most widely used architecture so far in acoustic tokens.
+SoundStream~\cite{zeghidour2021soundstream} and EnCodec~\cite{encodec} are two famous early neural acoustic tokens that operate in an end-to-end VQ-GAN manner.
+They receive time-domain waveforms as inputs and directly reconstruct waveforms.
+Their encoder and decoder have a mirrored architecture to perform down and up-samplings.
+In SoundStream, the encoder and decoder are purely constructed by convolutional neural networks (CNNs) while EnCodec augments them with an LSTM.
+The CNN encoder down-samples the waveform to a high-dimensional embedding sequence, whose frame rate is determined by the sampling rate, CNN kernel sizes and strides at a fixed ratio.
+The continuous embeddings are passed to an RVQ quantizer, and the quantized vectors are summed before being transformed to the waveform domain by the CNN decoder.
+The training criteria include reconstruction loss (in the time and frequency domain), adversarial loss, feature matching loss, and quantization losses for RVQ layers.
+To allow for a flexible choice of bitrates, structured dropout is adopted where the number of codebooks in the RVQ module can be randomly chosen~\cite{zeghidour2021soundstream}, such that only a portion of quantizers in front are activated during training.
+The acoustic tokens can consequently reside in variable bitrates depending on the chosen number of RVQ quantizers.
+The inputs and outputs of the codec model can also be frequency-domain features like magnitude and phase spectra for reducing computation burden~\cite{du2024funcodec}.
+There, the convolution kernels are typically 2D instead of 1D in the time-domain codecs.
+
+Later, Transformers~\cite{transformer} have been adopted, e.g. in Single-Codec~\cite{singlecodec} and Mimi~\cite{kyutai2024moshi}.
+They can be directly applied to frequency-domain inputs and outputs.
+When operating on waveform-domain inputs or outputs, a CNN~\cite{kyutai2024moshi} or patchifying~\cite{wu2024ts3codectransformerbasedsimplestreaming,parker2024scalingtransformerslowbitratehighquality} operation is usually added before or after the Transformer blocks.
+In Mimi, a shallow Transformer layer is added after the CNN-based encoder, and vice versa in its decoder.
+Recently, some propose to use purely Transformer-based backbone and discard the CNN blocks, e.g. TS3-Codec~\cite{wu2024ts3codectransformerbasedsimplestreaming}.
+As Transformers demonstrate superior modeling ability and scaling property, these works prove to outperform CNN-based codecs either with less computation~\cite{wu2024ts3codectransformerbasedsimplestreaming} or larger scale~\cite{parker2024scalingtransformerslowbitratehighquality}.
+However, to ensure stream-ability, an attention mask should be employed~\cite{kyutai2024moshi}.
+The encoder and decoder can also be designed to be different.
+For example, Single-Codec~\cite{singlecodec} uses Conformer~\cite{conformer} encoder and CNN decoder, while LSCodec~\cite{guo2024lscodec} uses the reverse configuration.
+
+Though RVQ or GVQ is usually applied, most acoustic tokens contain only one quantization module as a whole.
+However, there are also U-Net-based codecs where multiple quantizers are employed, e.g. CoFi-Codec~\cite{guo2024speaking} and ESC~\cite{gu2024esc}.
+Each sub-encoder or decoder in the U-Net can be a CNN or Transformer.
+This offers a more flexible control of the resolution of each VQ stream (Section \ref{sec:multi-resolution}).
+
+It is also noteworthy that training a separate vocoder on top of existing acoustic tokens may result in improved audio quality than the original decoded outputs, since reconstructing waveform alone may be simpler than optimizing VQ representation and reconstruction at the same time.
+This is exemplarily verified in AudioDec~\cite{audiodec}, MBD~\cite{san2023discrete} and Vocos~\cite{siuzdak2024vocos}.
+Therefore, some acoustic tokens directly simplify the VQ-GAN training objective back to the original VQ-VAE, where the discrete tokens are obtained first by a simple reconstruction loss, and a vocoder is trained as an additional stage, like AudioDec~\cite{audiodec} and LSCodec~\cite{guo2024lscodec}.
+These works are denoted as ``VQ-VAE+GAN'' in Table \ref{tab:acoustic-metadata}.
+
+#### Latent Diffusion
+
+Different from VQ-GAN which uses GAN to generate waveforms or frequency features, some codecs also use latent diffusion~\cite{ho2020denoising,song2021scorebased,rombach2022high} as an alternative.
+These codecs use discretized tokens as a condition to generate some latent acoustic space, e.g. from a pretrained continuous speech autoencoder.
+Since diffusion models are strong generative models, acoustic tokens of this type does not need discriminators and adversarial training like VQ-GAN.
+For instance, LaDiffCodec~\cite{yang2024generative} uses EnCodec tokens to condition the diffusion process from Gaussian noise to the latent space in a pretrained and frozen waveform autoencoder.
+This is to bridge the gap of reconstruction quality between discrete and continuous representations and improve the codec performance compared to the original acoustic tokens.
+Inference efficiency is a major concern of these models unless specifically optimized in limited sampling steps.
 
 ## 4·Experiments: 实验
 
